Changelog
=========

Nutils is under active development and the API is not frozen. Active
users are advised to keep an eye on this file to stay up to date with
the most prominent user-facing changes.


Changed: strict dimension equality in function.outer

  Function.outer allows arguments of different dimension by left-padding
  the smallest prior to multiplication. There is no clear reason for
  this generality and it hinders error checking. Therefore in future in
  function.outer( a, b ), a.ndim must equal b.ndim.

  In a brief transition period non-equality emits a warning.


Reverted: log iterators

  Manually setting the __log__ property is removed and the old notation
  is reintroduced. The change is backwards incompatible, in a way that
  an warning is issued and output is written to a fallback stream in
  case __log__ is manually overwritten. Update your code as follows:

  Removed syntax:
  >> __log__ = log.iter( 'elem', topo )
  >> for elem in __log__:

  Restored syntax:
  >> for elem in log.iter( 'elem', topo ):


Changed: Evaluable base class

  Relevant only for custom Evaluable/ArrayFunc objects. The evalf method
  changes from constructor argument to instance/class method.

  Old syntax:
  >> class MyEval( function.Evaluable ):
  >>   def __init__( self, .. ):
  >>     function.Evaluable( args=[..], evalf=my_static_function, shape=.. )

  New syntax:
  >> class MyEval( function.Evaluable ):
  >>   def __init__( self, .. ):
  >>     function.Evaluable( args=[..], shape=.. )
  >>   def evalf( self, .. ):
  >>     ..

  Moreover, the `args` argument may only contain Evaluable objects.
  Static information is to be passed through `self`.


Removed: _numeric C-extension

  At this point nutils is pure Python. It is no longer necessary to run
  make to compile extension modules. The numeric.py module remains
  unchanged.


Changed: periodic boundary groups

  Touching elements of periodic domains are no longer part of the