@@ -66,7 +66,7 @@ def main( nelems=8, viscosity=1e-3, density=1, warp=False, plot=True, tol=1e-5, 
     ugradu = ( vbasis.grad(geom) * vbasis.dot(lhs) ).sum(-1)
     convection = density * function.outer( vbasis, ugradu ).sum(-1)
     matrix = stokesmat + domain.integrate( convection, ischeme='gauss9', geometry=geom )
-    lhs, info = matrix.solve( rhs, x0=lhs, tol=tol, info=True, precon='spilu', restart=999 )
+    lhs, info = matrix.solve( rhs, lhs0=lhs, tol=tol, info=True, precon='spilu', restart=999 )
     if info.niter == 0:
       break
 
