@@ -53,7 +53,7 @@ def main( nelems=12, stress=library.Hooke(lmbda=1,mu=1), degree=2, angle=15, res
     B = ( dbasis.grad(geom) * stress(-F) ).sum([-2,-1])
     matrix, rhs = domain.integrate( [ A, B ], geometry=geom, ischeme='gauss6' )
 
-    lhs, info = matrix.solve( rhs, constrain=cons, x0=lhs, tol=restol, precon='spilu', info=True )
+    lhs, info = matrix.solve( rhs, constrain=cons, lhs0=lhs, tol=restol, precon='spilu', info=True )
     if not info.niter:
       break
 
