@@ -434,7 +434,7 @@ class Topology( object ):
     return onto.dot( weights )
 
   @log.title
-  def project( self, fun, onto, geometry, tol=0, ischeme=None, droptol=1e-12, exact_boundaries=False, constrain=None, verify=None, maxiter=0, ptype='lsqr', precon='diag' ):
+  def project( self, fun, onto, geometry, tol=0, ischeme=None, droptol=1e-12, exact_boundaries=False, constrain=None, verify=None, ptype='lsqr', precon='diag', **solverargs ):
     'L2 projection of function onto function space'
 
     log.debug( 'projection type:', ptype )
@@ -471,7 +471,7 @@ class Topology( object ):
       else:
         solvecons = constrain.copy()
         solvecons[~(constrain.where|N)] = 0
-        u = A.solve( b, solvecons, tol=tol, symmetric=True, maxiter=maxiter, precon=precon )
+        u = A.solve( b, solvecons, tol=tol, symmetric=True, precon=precon, **solverargs )
         constrain[N] = u[N]
         err2 = f2 - numpy.dot( 2*b-A.matvec(u), u ) # can be negative ~zero due to rounding errors
         avg_error = numpy.sqrt( err2 ) / area if err2 > 0 else 0
